--- a/roles/sysctl/templates/sysctl_d.j2
+++ b/roles/sysctl/templates/sysctl_d.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-{% for parameter in _d.parameters | sort %}
+{% for parameter in _d.parameters | sort(attribute='key') %}
 {%   if parameter.key is defined and parameter.value is defined %}
 {{ parameter.key }} = {{ parameter.value | string }}
 {%   endif %}
