--- a/roles/pam_limit/templates/limits.conf.j2
+++ b/roles/pam_limit/templates/limits.conf.j2
@@ -1,10 +1,12 @@
 # {{ ansible_managed }}
 
-{% for limit in pam_limits %}
-{%   if limit.domain is defined and
-        limit.limit_item is defined and
-        limit.limit_type is defined and
-        limit.value is defined %}
+{% if pam_limits | length > 0 %}
+{%   for limit in pam_limits %}
+{%     if limit.domain is defined and
+          limit.limit_item is defined and
+          limit.limit_type is defined and
+          limit.value is defined %}
 {{ limit.domain }}	{{ limit.limit_item }}	{{ limit.limit_type }}	{{ limit.value }}
-{%   endif %}
-{% endfor %}
+{%     endif %}
+{%   endfor %}
+{% endif %}
