--- a/roles/pam_limit/templates/limits.conf.j2
+++ b/roles/pam_limit/templates/limits.conf.j2
@@ -6,7 +6,7 @@
           limit.limit_item is defined and
           limit.limit_type is defined and
           limit.value is defined %}
-{{ limit.domain }}	{{ limit.limit_item }}	{{ limit.limit_type }}	{{ limit.value }}
+{{ limit.domain }}	{{ limit.limit_type }}	{{ limit.limit_item }}	{{ limit.value }}
 {%     endif %}
 {%   endfor %}
 {% endif %}
