--- a/roles/openssh_client/templates/ssh_config_d.j2
+++ b/roles/openssh_client/templates/ssh_config_d.j2
@@ -1,9 +1,20 @@
 # {{ ansible_managed }}
 
 Host {{ _client.host }}
-{% for option in _client.options | sort(attribute='key') %}
-{%   if option.key is defined and
-        option.value is defined %}
-  {{ option.key }} {{ option.value }}
+{% for key, value in _client.options | dictsort %}
+{%   if value is sameas true %}
+  {{ key }} yes
+{%   elif value is sameas false %}
+  {{ key }} no
+{%   elif value is string %}
+  {{ key }} {{ value | string }}
+{%   elif value is number %}
+  {{ key }} {{ value | int }}
+{%   elif value is iterable %}
+{%     for i in value %}
+  {{ key }} {{ i }}
+{%     endfor %}
+{%   else %}
+  {{ key }} {{ value }}
 {%   endif %}
 {% endfor %}
