[Change] Convert openssh_server from list->dict

--- a/roles/openssh_server/templates/sshd_config.j2
+++ b/roles/openssh_server/templates/sshd_config.j2
@@ -1,8 +1,19 @@
 # {{ ansible_managed }}
 
-{% for option in openssh_server | sort(attribute='key') %}
-{%   if option.key is defined and
-        option.value is defined %}
-{{ option.key }} {{ option.value }}
+{% for key, value in openssh_server | dictsort %}
+{%   if value is sameas true %}
+  {{ key }} yes
+{%   elif value is sameas false %}
+  {{ key }} no
+{%   elif value is string %}
+  {{ key }} {{ value | string }}
+{%   elif value is number %}
+  {{ key }} {{ value | int }}
+{%   elif value is iterable %}
+{%     for i in value %}
+  {{ key }} {{ i }}
+{%     endfor %}
+{%   else %}
+  {{ key }} {{ value }}
 {%   endif %}
 {% endfor %}
