--- a/roles/sysctl/templates/sysctl.conf.j2
+++ b/roles/sysctl/templates/sysctl.conf.j2
@@ -1,7 +1,5 @@
 # {{ ansible_managed }}
 
-{% for parameter in sysctl_conf | sort(attribute='key') %}
-{%   if parameter.key is defined and parameter.value is defined %}
-{{ parameter.key }} = {{ parameter.value | string }}
-{%   endif %}
+{% for key, value in sysctl_conf | dictsort %}
+{{ key }} = {{ value | string }}
 {% endfor %}
