--- a/roles/elrepo/templates/elrepo.repo.8.j2
+++ b/roles/elrepo/templates/elrepo.repo.8.j2
@@ -7,7 +7,9 @@ baseurl=http://elrepo.org/linux/elrepo/el{{ elrepo_releasever }}/$basearch/
 	http://mirrors.coreix.net/elrepo/elrepo/el{{ elrepo_releasever }}/$basearch/
 	http://mirror.rackspace.com/elrepo/elrepo/el{{ elrepo_releasever }}/$basearch/
 	http://linux-mirrors.fnal.gov/linux/elrepo/elrepo/el{{ elrepo_releasever }}/$basearch/
+{% if elrepo_repository_elrepo_mirrorlist | bool %}
 mirrorlist=http://mirrors.elrepo.org/mirrors-elrepo.el{{ elrepo_releasever }}
+{% endif %}
 enabled={{ '1' if elrepo_repository_elrepo | bool else '0' }}
 countme=1
 gpgcheck=1
@@ -19,7 +21,9 @@ baseurl=http://elrepo.org/linux/testing/el{{ elrepo_releasever }}/$basearch/
 	http://mirrors.coreix.net/elrepo/testing/el{{ elrepo_releasever }}/$basearch/
 	http://mirror.rackspace.com/elrepo/testing/el{{ elrepo_releasever }}/$basearch/
 	http://linux-mirrors.fnal.gov/linux/elrepo/testing/el{{ elrepo_releasever }}/$basearch/
+{% if elrepo_repository_elrepo_testing_mirrorlist | bool %}
 mirrorlist=http://mirrors.elrepo.org/mirrors-elrepo-testing.el{{ elrepo_releasever }}
+{% endif %}
 enabled={{ '1' if elrepo_repository_elrepo_testing | bool else '0' }}
 countme=1
 gpgcheck=1
@@ -31,7 +35,9 @@ baseurl=http://elrepo.org/linux/kernel/el{{ elrepo_releasever }}/$basearch/
 	http://mirrors.coreix.net/elrepo/kernel/el{{ elrepo_releasever }}/$basearch/
 	http://mirror.rackspace.com/elrepo/kernel/el{{ elrepo_releasever }}/$basearch/
 	http://linux-mirrors.fnal.gov/linux/elrepo/kernel/el{{ elrepo_releasever }}/$basearch/
+{% if elrepo_repository_elrepo_kernel_mirrorlist | bool %}
 mirrorlist=http://mirrors.elrepo.org/mirrors-elrepo-kernel.el{{ elrepo_releasever }}
+{% endif %}
 enabled={{ '1' if elrepo_repository_elrepo_kernel | bool else '0' }}
 countme=1
 gpgcheck=1
@@ -43,7 +49,9 @@ baseurl=http://elrepo.org/linux/extras/el{{ elrepo_releasever }}/$basearch/
 	http://mirrors.coreix.net/elrepo/extras/el{{ elrepo_releasever }}/$basearch/
 	http://mirror.rackspace.com/elrepo/extras/el{{ elrepo_releasever }}/$basearch/
 	http://linux-mirrors.fnal.gov/linux/elrepo/extras/el{{ elrepo_releasever }}/$basearch/
+{% if elrepo_repository_elrepo_extras_mirrorlist | bool %}
 mirrorlist=http://mirrors.elrepo.org/mirrors-elrepo-extras.el{{ elrepo_releasever }}
+{% endif %}
 enabled={{ '1' if elrepo_repository_elrepo_extras | bool else '0' }}
 countme=1
 gpgcheck=1
