[Change] Update transmission_daemon role and associated molecule tests

--- a/roles/transmission_daemon/templates/settings.json.j2
+++ b/roles/transmission_daemon/templates/settings.json.j2
@@ -1,73 +1,73 @@
 {
-    "alt-speed-down": {{ td_alt_speed_down }},
-    "alt-speed-enabled": {{ 'true' if td_alt_speed_enabled | bool else 'false' }},
-    "alt-speed-time-begin": {{ td_alt_speed_time_begin }},
-    "alt-speed-time-day": {{ td_alt_speed_time_day }},
-    "alt-speed-time-enabled": {{ 'true' if td_alt_speed_time_enabled | bool else 'false' }},
-    "alt-speed-time-end": {{ td_alt_speed_time_end }},
-    "alt-speed-up": {{ td_alt_speed_up }},
-    "bind-address-ipv4": "{{ td_bind_address_ipv4 }}",
-    "bind-address-ipv6": "{{ td_bind_address_ipv6 }}",
-    "blocklist-enabled": {{ 'true' if td_blocklist_enabled | bool else 'false' }},
-    "blocklist-url": "{{ td_blocklist_url }}",
-    "cache-size-mb": {{ td_cache_size_mb }},
-    "dht-enabled": {{ 'true' if td_dht_enabled | bool else 'false' }},
-    "download-dir": "{{ td_download_dir }}",
-    "download-limit": {{ td_download_limit | int }},
-    "download-limit-enabled": {{ '1' if td_download_limit_enabled | bool else '0' }},
-    "download-queue-enabled": {{ 'true' if td_download_queue_enabled | bool else 'false' }},
-    "download-queue-size": {{ td_download_queue_size }},
-    "encryption": {{ td_encryption }},
-    "idle-seeding-limit": {{ td_idle_seeding_limit }},
-    "idle-seeding-limit-enabled": {{ 'true' if td_idle_seeding_limit_enabled | bool else 'false' }},
-    "incomplete-dir": "{{ td_incomplete_dir }}",
-    "incomplete-dir-enabled": {{ 'true' if td_incomplete_dir_enabled | bool else 'false' }},
-    "lpd-enabled": {{ 'true' if td_lpd_enabled | bool else 'false' }},
-    "max-peers-global": {{ td_max_peers_global | int }},
-    "message-level": {{ td_message_level }},
-    "peer-congestion-algorithm": "{{ td_peer_congestion_algorithm }}",
-    "peer-id-ttl-hours": {{ td_peer_id_ttl_hours }},
-    "peer-limit-global": {{ td_peer_limit_global }},
-    "peer-limit-per-torrent": {{ td_peer_limit_per_torrent }},
-    "peer-port": {{ td_peer_port }},
-    "peer-port-random-high": {{ td_peer_port_random_high }},
-    "peer-port-random-low": {{ td_peer_port_random_low }},
-    "peer-port-random-on-start": {{ 'true' if td_peer_port_random_on_start | bool else 'false' }},
-    "peer-socket-tos": "{{ td_peer_socket_tos }}",
-    "pex-enabled": {{ 'true' if td_pex_enabled|bool else 'false' }},
-    "port-forwarding-enabled": {{ 'true' if td_port_forwarding_enabled | bool else 'false' }},
-    "preallocation": {{ td_preallocation }},
-    "prefetch-enabled": {{ 'true' if td_prefetch_enabled | bool else 'false' }},
-    "queue-stalled-enabled": {{ 'true' if td_queue_stalled_enabled | bool else 'false' }},
-    "queue-stalled-minutes": {{ td_queue_stalled_minutes }},
-    "ratio-limit": {{ td_ratio_limit }},
-    "ratio-limit-enabled": {{ 'true' if td_ratio_limit_enabled | bool else 'false' }},
-    "rename-partial-files": {{ 'true' if td_rename_partial_files | bool else 'false' }},
-    "rpc-authentication-required": {{ 'true' if td_rpc_authentication_required | bool else 'false' }},
-    "rpc-bind-address": "{{ td_rpc_bind_address }}",
-    "rpc-enabled": {{ 'true' if td_rpc_enabled | bool else 'false' }},
-    "rpc-host-whitelist": "{{ td_rpc_host_whitelist | join(',') }}",
-    "rpc-host-whitelist-enabled": {{ 'true' if td_rpc_host_whitelist_enabled | bool else 'false' }},
-    "rpc-password": "{{ td_rpc_password }}",
-    "rpc-port": {{ td_rpc_port }},
-    "rpc-url": "{{ td_rpc_url }}",
-    "rpc-username": "{{ td_rpc_username }}",
-    "rpc-whitelist": "{{ td_rpc_whitelist | join(',') }}",
-    "rpc-whitelist-enabled": {{ 'true' if td_rpc_whitelist_enabled | bool else 'false' }},
-    "scrape-paused-torrents-enabled": {{ 'true' if td_scrape_paused_torrents_enabled | bool else 'false' }},
-    "script-torrent-done-enabled": {{ 'true' if td_script_torrent_done_enabled | bool else 'false' }},
-    "script-torrent-done-filename": "{{ td_script_torrent_done_filename }}",
-    "seed-queue-enabled": {{ 'true' if td_seed_queue_enabled | bool else 'false' }},
-    "seed-queue-size": {{ td_seed_queue_size }},
-    "speed-limit-down": {{ td_speed_limit_down }},
-    "speed-limit-down-enabled": {{ 'true' if td_speed_limit_down_enabled | bool else 'false' }},
-    "speed-limit-up": {{ td_speed_limit_up }},
-    "speed-limit-up-enabled": {{ 'true' if td_speed_limit_up_enabled | bool else 'false' }},
-    "start-added-torrents": {{ 'true' if td_start_added_torrents | bool else 'false' }},
-    "trash-original-torrent-files": {{ 'true' if td_trash_original_torrent_files | bool else 'false' }},
-    "umask": {{ td_umask }},
-    "upload-limit": {{ td_upload_limit | int }},
-    "upload-limit-enabled": {{ '1' if td_upload_limit_enabled | bool else '0' }},
-    "upload-slots-per-torrent": {{ td_upload_slots_per_torrent }},
-    "utp-enabled": {{ 'true' if td_utp_enabled | bool else 'false' }}
+    "alt-speed-down": {{ transmission_daemon_alt_speed_down }},
+    "alt-speed-enabled": {{ 'true' if transmission_daemon_alt_speed_enabled | bool else 'false' }},
+    "alt-speed-time-begin": {{ transmission_daemon_alt_speed_time_begin }},
+    "alt-speed-time-day": {{ transmission_daemon_alt_speed_time_day }},
+    "alt-speed-time-enabled": {{ 'true' if transmission_daemon_alt_speed_time_enabled | bool else 'false' }},
+    "alt-speed-time-end": {{ transmission_daemon_alt_speed_time_end }},
+    "alt-speed-up": {{ transmission_daemon_alt_speed_up }},
+    "bind-address-ipv4": "{{ transmission_daemon_bind_address_ipv4 }}",
+    "bind-address-ipv6": "{{ transmission_daemon_bind_address_ipv6 }}",
+    "blocklist-enabled": {{ 'true' if transmission_daemon_blocklist_enabled | bool else 'false' }},
+    "blocklist-url": "{{ transmission_daemon_blocklist_url }}",
+    "cache-size-mb": {{ transmission_daemon_cache_size_mb }},
+    "dht-enabled": {{ 'true' if transmission_daemon_dht_enabled | bool else 'false' }},
+    "download-dir": "{{ transmission_daemon_download_dir }}",
+    "download-limit": {{ transmission_daemon_download_limit | int }},
+    "download-limit-enabled": {{ '1' if transmission_daemon_download_limit_enabled | bool else '0' }},
+    "download-queue-enabled": {{ 'true' if transmission_daemon_download_queue_enabled | bool else 'false' }},
+    "download-queue-size": {{ transmission_daemon_download_queue_size }},
+    "encryption": {{ transmission_daemon_encryption }},
+    "idle-seeding-limit": {{ transmission_daemon_idle_seeding_limit }},
+    "idle-seeding-limit-enabled": {{ 'true' if transmission_daemon_idle_seeding_limit_enabled | bool else 'false' }},
+    "incomplete-dir": "{{ transmission_daemon_incomplete_dir }}",
+    "incomplete-dir-enabled": {{ 'true' if transmission_daemon_incomplete_dir_enabled | bool else 'false' }},
+    "lpd-enabled": {{ 'true' if transmission_daemon_lpd_enabled | bool else 'false' }},
+    "max-peers-global": {{ transmission_daemon_max_peers_global | int }},
+    "message-level": {{ transmission_daemon_message_level }},
+    "peer-congestion-algorithm": "{{ transmission_daemon_peer_congestion_algorithm }}",
+    "peer-id-ttl-hours": {{ transmission_daemon_peer_id_ttl_hours }},
+    "peer-limit-global": {{ transmission_daemon_peer_limit_global }},
+    "peer-limit-per-torrent": {{ transmission_daemon_peer_limit_per_torrent }},
+    "peer-port": {{ transmission_daemon_peer_port }},
+    "peer-port-random-high": {{ transmission_daemon_peer_port_random_high }},
+    "peer-port-random-low": {{ transmission_daemon_peer_port_random_low }},
+    "peer-port-random-on-start": {{ 'true' if transmission_daemon_peer_port_random_on_start | bool else 'false' }},
+    "peer-socket-tos": "{{ transmission_daemon_peer_socket_tos }}",
+    "pex-enabled": {{ 'true' if transmission_daemon_pex_enabled|bool else 'false' }},
+    "port-forwarding-enabled": {{ 'true' if transmission_daemon_port_forwarding_enabled | bool else 'false' }},
+    "preallocation": {{ transmission_daemon_preallocation }},
+    "prefetch-enabled": {{ 'true' if transmission_daemon_prefetch_enabled | bool else 'false' }},
+    "queue-stalled-enabled": {{ 'true' if transmission_daemon_queue_stalled_enabled | bool else 'false' }},
+    "queue-stalled-minutes": {{ transmission_daemon_queue_stalled_minutes }},
+    "ratio-limit": {{ transmission_daemon_ratio_limit }},
+    "ratio-limit-enabled": {{ 'true' if transmission_daemon_ratio_limit_enabled | bool else 'false' }},
+    "rename-partial-files": {{ 'true' if transmission_daemon_rename_partial_files | bool else 'false' }},
+    "rpc-authentication-required": {{ 'true' if transmission_daemon_rpc_authentication_required | bool else 'false' }},
+    "rpc-bind-address": "{{ transmission_daemon_rpc_bind_address }}",
+    "rpc-enabled": {{ 'true' if transmission_daemon_rpc_enabled | bool else 'false' }},
+    "rpc-host-whitelist": "{{ transmission_daemon_rpc_host_whitelist | join(',') }}",
+    "rpc-host-whitelist-enabled": {{ 'true' if transmission_daemon_rpc_host_whitelist_enabled | bool else 'false' }},
+    "rpc-password": "{{ transmission_daemon_rpc_password }}",
+    "rpc-port": {{ transmission_daemon_rpc_port }},
+    "rpc-url": "{{ transmission_daemon_rpc_url }}",
+    "rpc-username": "{{ transmission_daemon_rpc_username }}",
+    "rpc-whitelist": "{{ transmission_daemon_rpc_whitelist | join(',') }}",
+    "rpc-whitelist-enabled": {{ 'true' if transmission_daemon_rpc_whitelist_enabled | bool else 'false' }},
+    "scrape-paused-torrents-enabled": {{ 'true' if transmission_daemon_scrape_paused_torrents_enabled | bool else 'false' }},
+    "script-torrent-done-enabled": {{ 'true' if transmission_daemon_script_torrent_done_enabled | bool else 'false' }},
+    "script-torrent-done-filename": "{{ transmission_daemon_script_torrent_done_filename }}",
+    "seed-queue-enabled": {{ 'true' if transmission_daemon_seed_queue_enabled | bool else 'false' }},
+    "seed-queue-size": {{ transmission_daemon_seed_queue_size }},
+    "speed-limit-down": {{ transmission_daemon_speed_limit_down }},
+    "speed-limit-down-enabled": {{ 'true' if transmission_daemon_speed_limit_down_enabled | bool else 'false' }},
+    "speed-limit-up": {{ transmission_daemon_speed_limit_up }},
+    "speed-limit-up-enabled": {{ 'true' if transmission_daemon_speed_limit_up_enabled | bool else 'false' }},
+    "start-added-torrents": {{ 'true' if transmission_daemon_start_added_torrents | bool else 'false' }},
+    "trash-original-torrent-files": {{ 'true' if transmission_daemon_trash_original_torrent_files | bool else 'false' }},
+    "umask": {{ transmission_daemon_umask }},
+    "upload-limit": {{ transmission_daemon_upload_limit | int }},
+    "upload-limit-enabled": {{ '1' if transmission_daemon_upload_limit_enabled | bool else '0' }},
+    "upload-slots-per-torrent": {{ transmission_daemon_upload_slots_per_torrent }},
+    "utp-enabled": {{ 'true' if transmission_daemon_utp_enabled | bool else 'false' }}
 }
