--- a/roles/needs_restarting/templates/crontab.j2
+++ b/roles/needs_restarting/templates/crontab.j2
@@ -1,3 +1,3 @@
 # {{ ansible_managed }}
 
-{{ nr_crontab }} {{ nr_user }} /usr/bin/dnf needs-restarting -r >/dev/null || /usr/bin/systemctl reboot
+{{ needs_restarting_crontab }} {{ needs_restarting_user }} /usr/bin/dnf needs-restarting -r >/dev/null || /usr/bin/systemctl reboot
