[Change] Update sysctl role and associated molecule tests

--- a/roles/sysctl/templates/sysctl_d.j2
+++ b/roles/sysctl/templates/sysctl_d.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
 
-{% for key, value in _d.parameters | dictsort %}
+{% for key, value in _sysctl.parameters | dictsort %}
 {{ key }} = {{ value | string }}
 {% endfor %}
