--- a/roles/speedtest/templates/ookla_speedtest-cli.repo.j2
+++ b/roles/speedtest/templates/ookla_speedtest-cli.repo.j2
@@ -1,9 +1,9 @@
 [ookla_speedtest-cli]
 name=ookla_speedtest-cli
-baseurl=https://packagecloud.io/ookla/speedtest-cli/el/{{ speedtest_releasever }}/$basearch
-repo_gpgcheck=1
+baseurl=https://packagecloud.io/ookla/speedtest-cli/el/{{ ansible_distribution_major_version }}/$basearch
+repo_gpgcheck=0
 gpgcheck=0
-enabled={{ '1' if speedtest_repository_cli | bool else '0' }}
+enabled=1
 gpgkey=https://packagecloud.io/ookla/speedtest-cli/gpgkey
 sslverify=1
 sslcacert=/etc/pki/tls/certs/ca-bundle.crt
@@ -11,10 +11,10 @@ metadata_expire=300
 
 [ookla_speedtest-cli-source]
 name=ookla_speedtest-cli-source
-baseurl=https://packagecloud.io/ookla/speedtest-cli/el/{{ speedtest_releasever }}/SRPMS
-repo_gpgcheck=1
+baseurl=https://packagecloud.io/ookla/speedtest-cli/el/{{ ansible_distribution_major_version }}/SRPMS
+repo_gpgcheck=0
 gpgcheck=0
-enabled={{ '1' if speedtest_repository_cli_source | bool else '0' }}
+enabled=0
 gpgkey=https://packagecloud.io/ookla/speedtest-cli/gpgkey
 sslverify=1
 sslcacert=/etc/pki/tls/certs/ca-bundle.crt
